# music-cutter

./: .releaserc.json  CHANGELOG.md  README.md  README.ru.md  RELEASE.md  package-lock.json  package.json  test-review.md  test3.md  test4.md  vite.config.ts
.github/scripts/: generate-latest.cjs
.github/workflows/: claude-code-review.yml  release.yml  tauri-build.yml  test.md
docs/: DEMUCS_INTEGRATION_PLAN.md
docs/plans/: 2025-01-08-i18n-design.md  2025-01-08-i18n-implementation.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  audio.rs  batch.rs  ffmpeg.rs  file.rs  metadata.rs  mod.rs
src-tauri/src/services/: ffmpeg.rs  metadata.rs  mod.rs  time.rs
src-tauri/src/services/ffmpeg/: command.rs  cut.rs  duration.rs  filter.rs  internal.rs  mod.rs
src-tauri/src/services/ffmpeg_downloader/: disk.rs  download.rs  extract.rs  mod.rs
src-tauri/src/services/ffmpeg_manager/: detect.rs  mod.rs  paths.rs
src-tauri/src/types/: audio.rs  ffmpeg.rs  metadata.rs  mod.rs
src/api/: batch.ts  commands.ts  ffmpeg.ts  metadata.ts  updater.ts
src/components/: BatchMetadataPanel.tsx  BatchProgress.tsx  CoverUpload.tsx  CoverUploadCompact.tsx  CutButton.tsx  FfmpegInstallDialog.tsx  FileSelector.tsx  LanguageToggle.tsx  MetadataField.tsx  ProgressBar.tsx  StatusAlert.tsx  ThemeToggle.tsx  TimeField.tsx  TimecodeInput.tsx  TrackListEditor.tsx  TrackListHeader.tsx  TrackRow.tsx  TracklistInput.tsx  UpdateDialog.tsx  WhatsNewDialog.tsx
src/contexts/: FFmpegContext.tsx
(+39 files in other folders)
