[package]
name = "music-cutter"
version = "1.6.3"
description = "Audio fragment cutter"
authors = ["ikshorin"]
edition = "2021"

[lib]
name = "music_cutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "0.6"
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "5"
zip = "2"
sha2 = "0.10"
futures-util = "0.3"
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
